WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249697
[IFC][hanging punctuation] LineBuilder::leadingPunctuationWidthForLineCandiate/trailingPunctuationWidthForLineCandiate should only start searching for contentful runs when punctuation is present
https://bugs.webkit.org/show_bug.cgi?id=249697
Summary
[IFC][hanging punctuation] LineBuilder::leadingPunctuationWidthForLineCandiat...
alan baradlay
Reported
2022-12-20 21:00:18 PST
ssia
Attachments
Patch
(3.51 KB, patch)
2022-12-20 21:01 PST
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Patch
(3.50 KB, patch)
2022-12-22 06:01 PST
,
alan baradlay
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan baradlay
Comment 1
2022-12-20 21:01:56 PST
Created
attachment 464135
[details]
Patch
alan baradlay
Comment 2
2022-12-22 06:01:33 PST
Created
attachment 464163
[details]
Patch
EWS
Comment 3
2022-12-22 09:41:53 PST
Committed
258247@main
(a790799aa36d): <
https://commits.webkit.org/258247@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464163
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-12-22 09:42:16 PST
<
rdar://problem/103641016
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug