[IFC][hanging punctuation] LineBuilder::leadingPunctuationWidthForLineCandiate/trailingPunctuationWidthForLineCandiate should only start searching for contentful runs when punctuation is present https://bugs.webkit.org/show_bug.cgi?id=249697

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::leadingPunctuationWidthForLineCandiate const):
(WebCore::Layout::LineBuilder::trailingPunctuationWidthForLineCandiate const):

Canonical link: https://commits.webkit.org/258247@main